Change name of the package

--- a/docs/example.ipynb
+++ b/docs/example.ipynb
@@ -22,8 +22,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from pycounts.pycounts import count_words\n",
-    "from pycounts.plotting import plot_words"
+    "from pycountspromaxulti.pycounts import count_words\n",
+    "from pycountspromaxulti.plotting import plot_words"
    ]
   },
   {
@@ -102,6 +102,13 @@
    "source": [
     "fig = plot_words(counts, n=5)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
